force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/HealthCloudGA__CarePlanTemplate__c.object-meta.xml
<CustomObject>
    <label>Care Plan Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>