force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/Email_Channel_Consent_Status_MVN__c.field-meta.xml
<CustomField>
    <fullName>Email_Channel_Consent_Status_MVN__c</fullName>
    <description>Status value to default email channel consent to on application of the care plan.</description>
    <inlineHelpText>Status value to default email channel consent to on application of the care plan.</inlineHelpText>
    <label>Email Channel Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>