force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/External_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>External_ID_MVN__c</fullName>
    <description>External ID of the care plan template. Used in mapping the correct template upon creation of a care plan.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>