force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/HealthCloudGA__Category__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Endocrinology and Metabolism</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Disease Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>