force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/HealthCloudGA__ClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ClonedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
    <relationshipLabel>Care Plan Templates</relationshipLabel>
    <relationshipName>CarePlanTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>