force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/HealthCloudGA__Description__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>