force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/HIPAA_Consent_Data_Use_Purpose_MVN__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Consent_Data_Use_Purpose_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data Use Purpose record used to generate a HIPAA consent record on application of the care plan.</description>
    <label>HIPAA Consent Data Use Purpose</label>
    <referenceTo>DataUsePurpose</referenceTo>
    <relationshipLabel>Care Plan Templates (HIPAA)</relationshipLabel>
    <relationshipName>Care_Plan_Templates_HIPAA</relationshipName>
    <type>Lookup</type>
</CustomField>