force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/Marketing_Consent_Data_Use_Purpose_MVN__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Data_Use_Purpose_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data Use Purpose record used to generate a marketing consent record on application of the care plan.</description>
    <label>Marketing Consent Data Use Purpose</label>
    <referenceTo>DataUsePurpose</referenceTo>
    <relationshipLabel>Care Plan Templates (Marketing)</relationshipLabel>
    <relationshipName>Care_Plan_Templates_Marketing</relationshipName>
    <type>Lookup</type>
</CustomField>