force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplate__c/fields/Program_Consent_Data_Use_Purpose_MVN__c.field-meta.xml
<CustomField>
    <fullName>Program_Consent_Data_Use_Purpose_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data Use Purpose record used to generate a patient certification consent record on application of the care plan</description>
    <label>Patient Certification Data Use Purpose</label>
    <referenceTo>DataUsePurpose</referenceTo>
    <relationshipLabel>Care Plan Templates (Patient Certification)</relationshipLabel>
    <relationshipName>Care_Plan_Templates_Program</relationshipName>
    <type>Lookup</type>
</CustomField>